# csapd

./: .gitignore  README.md  Report Template docx.docx
Labs/1/: CMakeLists.txt  Comparison.txt  Pi  Pi.c  Report Lab1.doc
Labs/2/: Report Lab2.docx
Labs/3/: Listing x86-64.md  Listing x86.md  Report Lab3.docx
Labs/4/: Listing armv7-a clang 18.1.0.md  Report Lab4.docx
Labs/5/: CMakeLists.txt  Lab5  Main.cpp  Note.txt  Report Lab5.docx
Labs/6/: CMakeLists.txt  Lab6  Main.cpp  Report Lab6.docx
Labs/7/: Report Lab7.docx  opt1.cpp  opt2.cpp  opt3.cpp
Labs/8/: Report Lab8.docx  main.cpp
Labs/9/: Report Lab9.docx  main.cpp
